Took out class=container in body tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   must be something to do with the '.container' CSS
   class thing but have tried many different combinations
   with no luck-->
-  <body class="container">
+  <body>
     <header>
       <h1>TechTalent Academy Coding Festival</h1>
     </header>
