Made alterations as spcified in the brief

--- a/Changes/index.html
+++ b/Changes/index.html
@@ -21,8 +21,14 @@
   <body>
     <table>
       <thead>
-        <th colspan="2"><h1>Workshop Schedule</h1></th>
+        <th colspan="4"><h1>Workshop Schedule</h1></th>
         <tr>
+          <th colspan="2"><h2>saturday</h2></th>
+          <th colspan="2"><h2>sunday</h2></th>
+        </tr>
+        <tr>
+          <th class="left"><h2>time</h2></th>
+          <th><h2>event</h2></th>
           <th class="left"><h2>time</h2></th>
           <th><h2>event</h2></th>
         </tr>
@@ -30,28 +36,50 @@
 
       <tbody>
         <tr>
+          <td class="left"><h3>11:00 PM</h3></td>
+          <td rowspan="5"><h3>python 101</h3></td>
+          <td class="left"><h3>11:00 PM</h3></td>
+          <td rowspan="4"><h3>python 101</h3></td>
+        </tr>
+        <tr>
           <td class="left"><h3>12:00 PM</h3></td>
-          <td><h3>welcome to the festival</h3></td>
+          <!-- <td><h3>3</h3></td> -->
+          <td class="left"><h3>12:00 PM</h3></td>
+          <!-- <td><h3>4</h3></td> -->
         </tr>
         <tr>
           <td class="left"><h3>01:00 PM</h3></td>
-          <td><h3>Python 101</h3></td>
+          <!-- <td><h3>5</h3></td> -->
+          <td class="left"><h3>01:00 PM</h3></td>
+          <!-- <td><h3>6</h3></td> -->
         </tr>
         <tr>
           <td class="left"><h3>2:00 PM</h3></td>
-          <td><h3>KeePING yoU CyBEr sECuRE</h3></td>
+          <!-- <td><h3>7</h3></td> -->
+          <td class="left"><h3>02:00 PM</h3></td>
+          <!-- <td><h3>8</h3></td> -->
         </tr>
         <tr>
           <td class="left"><h3>03:00 PM</h3></td>
-          <td><h3>thE WwW aND HTML</h3></td>
-        </tr>
-      </tbody>
-      <tfoot>
+          <!-- <td><h3>9</h3></td> -->
+          <td class="left"><h3>03:00 PM</h3></td>
+          <td><h3>cv Workshop</h3></td>
+        </tr> 
         <tr>
           <td class="left"><h3>04:00 PM</h3></td>
-          <td><h3>GROUP PROJECT</h3></td>
+          <td><h3>group project</h3></td>
+          <td class="left"><h3>04:00 PM</h3></td>
+          <td><h3>group project</h3></td>
+        </tr>        
+      </tbody>
+      <tfoot>
+        <tr>          
+            <td class="left" colspan="2"><h3></h3></td>
+            <td class="left"><h3>05:00 PM</h3></td>
+            <td><h3>ceo closing speech</h3></td>          
         </tr>
       </tfoot>
+      </tbody>
     </table>
 
     <footer>
